resolve some bugs

--- a/app/src/main/res/layouts/waiting_list/layout/list_item_draggable.xml
+++ b/app/src/main/res/layouts/waiting_list/layout/list_item_draggable.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingStart="@dimen/dp4"
+    android:background="@color/transparent"
     android:paddingEnd="@dimen/dp4"
-    android:background="@color/transparent">
+    android:paddingStart="@dimen/dp4">
 
     <LinearLayout
         android:id="@+id/behind_views"
@@ -31,11 +31,11 @@
 
             <ImageButton
                 android:id="@+id/deleteButton"
-                android:layout_margin="@dimen/dp2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:srcCompat="@drawable/ic_delete_24dp"
-                android:background="@drawable/result_white_box_copy"/>
+                android:layout_margin="@dimen/dp2"
+                android:background="@drawable/result_white_box_copy"
+                app:srcCompat="@drawable/ic_delete_24dp" />
 
         </RelativeLayout>
 
@@ -267,18 +267,14 @@
             </RelativeLayout>
         </LinearLayout>
 
-        <View
+        <ImageButton
             android:id="@+id/dragHandle"
-            android:layout_width="@dimen/dp22"
-            android:layout_height="@dimen/dp24"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="end|center_vertical"
-           android:layout_marginBottom="@dimen/dp16"
-            android:layout_marginStart="@dimen/dp16"
-            android:layout_marginEnd="@dimen/dp24"
-            android:layout_marginTop="@dimen/dp16"
-            android:background="@drawable/drag_n_drop"
-            android:layout_marginLeft="@dimen/dp16"
-            android:layout_marginRight="@dimen/dp24" />
+            android:padding="@dimen/dp24"
+            android:background="@color/transparent"
+            app:srcCompat="@drawable/drag_n_drop" />
 
     </FrameLayout>
 
