--- a/app/src/main/res/layout/content_chat.xml
+++ b/app/src/main/res/layout/content_chat.xml
@@ -12,7 +12,7 @@
         android:id="@+id/chatList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/messageTypeLayout"
+        android:layout_above="@+id/bookAppointmentLayout"
         android:background="@drawable/layer_3"
         android:paddingEnd="@dimen/dp6"
         android:paddingStart="@dimen/dp6" />
