few bugs are resolved.

--- a/app/src/main/res/layouts/global_ui_for_connect/layout/services_item_textview.xml
+++ b/app/src/main/res/layouts/global_ui_for_connect/layout/services_item_textview.xml
@@ -4,10 +4,11 @@ xmlns:tools="http://schemas.android.com/tools"
 android:id="@+id/text"
 android:layout_width="match_parent"
 android:layout_height="wrap_content"
-android:padding="@dimen/dp8"
-android:drawablePadding="@dimen/dp16"
+android:paddingLeft="@dimen/dp10"
+android:paddingRight="@dimen/dp10"
+android:paddingBottom="@dimen/dp7"
 android:textColor="@color/about_doctor_color"
-android:textSize="@dimen/sp16"
+android:textSize="@dimen/sp14"
 android:textStyle="normal"
-app:customFont="@string/roboto_medium"
+app:customFont="@string/roboto_regular"
 tools:text="@string/select_date_text" />
