--- a/app/src/main/res/layouts/profile/layout/profile_content_layout.xml
+++ b/app/src/main/res/layouts/profile/layout/profile_content_layout.xml
@@ -35,7 +35,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/services"
-                        android:padding="@dimen/dp10"
+                        android:paddingLeft="@dimen/dp10"
+                        android:paddingRight="@dimen/dp10"
+                        android:paddingTop="@dimen/dp10"
+                        android:paddingBottom="@dimen/dp6"
                         android:textColor="@color/black"
                         android:textSize="@dimen/sp16"
                         app:customFont="@string/roboto_medium" />
@@ -85,6 +88,7 @@
                         android:text="@string/about_doctor"
                         android:textColor="@color/black"
                         android:textSize="@dimen/sp16"
+                        android:paddingBottom="@dimen/dp6"
                         app:customFont="@string/roboto_medium" />
 
                     <com.rescribe.doctor.ui.customesViews.CustomTextView
