--- a/app/src/main/res/layouts/dashboard/layout/settings_layout.xml
+++ b/app/src/main/res/layouts/dashboard/layout/settings_layout.xml
@@ -26,7 +26,7 @@
                 android:layout_marginLeft="@dimen/dp10"
                 android:layout_marginStart="@dimen/dp10"
                 android:adjustViewBounds="true"
-                android:visibility="invisible"
+                android:visibility="gone"
                 android:src="@drawable/dashboard_arrow"
                 android:padding="@dimen/dp10" />
 
@@ -34,11 +34,8 @@
                 android:id="@+id/logout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
-                android:layout_toEndOf="@+id/menuIcon"
-                android:layout_toRightOf="@+id/menuIcon"
-                android:paddingStart="@dimen/dp16"
+                android:paddingLeft="@dimen/dp17"
                 android:text="@string/logout"
                 android:textColor="@color/tagColor"
                 android:textSize="@dimen/sp16"
