--- a/app/src/main/res/layout/chat_backup_prompt.xml
+++ b/app/src/main/res/layout/chat_backup_prompt.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/dp10"
         android:layout_marginRight="@dimen/dp10"
-        android:background="@color/white"
+        android:background="@drawable/curve_edges_background"
         android:orientation="vertical">
 
         <ImageView
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:padding="@dimen/dp10"
-            android:text="@string/do_you_exit" />
+            android:text="@string/do_you_want_to_restore_backup" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -33,28 +33,30 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/button_cancel"
+                android:id="@+id/button_skip"
                 android:layout_width="0dp"
                 android:layout_height="42dp"
                 android:layout_marginTop="@dimen/dp8"
                 android:layout_weight="1"
-                android:background="@color/tagColor"
+                android:background="@drawable/curve_edges_button"
                 android:gravity="center"
-                android:text="@string/cancel"
+                android:text="@string/skip"
                 android:textColor="@color/white" />
+
+            <android.support.v4.widget.Space
+                android:layout_width="1dp"
+                android:layout_height="wrap_content" />
 
             <Button
                 android:id="@+id/button_ok"
                 android:layout_width="0dp"
                 android:layout_height="42dp"
-                android:layout_marginLeft="@dimen/dp2"
                 android:layout_marginTop="@dimen/dp8"
                 android:layout_weight="1"
-                android:background="@color/tagColor"
+                android:background="@drawable/curve_edges_button"
                 android:gravity="center"
                 android:text="@string/ok"
-                android:textColor="@color/white"
-                android:layout_marginStart="@dimen/dp2" />
+                android:textColor="@color/white"/>
         </LinearLayout>
 
     </LinearLayout>
