--- a/app/src/main/res/layout/dialog_exit.xml
+++ b/app/src/main/res/layout/dialog_exit.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -11,13 +12,14 @@
         android:layout_marginLeft="@dimen/dp10"
         android:layout_marginRight="@dimen/dp10"
         android:background="@color/white"
+        android:gravity="center"
         android:orientation="vertical">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp10"
             android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/dp10"
             app:srcCompat="@drawable/ic_info_outline_24dp" />
 
         <TextView
@@ -25,34 +27,39 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:padding="@dimen/dp8"
             android:text="@string/do_you_exit"
-            android:padding="@dimen/dp10" />
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
-        <Button
-            android:id="@+id/button_cancel"
-            android:layout_width="0dp"
-            android:layout_height="42dp"
-            android:layout_weight="1"
+            android:textSize="@dimen/sp18" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp8"
-            android:background="@color/tagColor"
-            android:gravity="center"
-            android:text="@string/cancel"
-            android:textColor="@color/white" />
-    <Button
-        android:id="@+id/button_ok"
-        android:layout_width="0dp"
-        android:layout_height="42dp"
-        android:layout_weight="1"
-        android:layout_marginLeft="@dimen/dp2"
-        android:layout_marginTop="@dimen/dp8"
-        android:background="@color/tagColor"
-        android:gravity="center"
-        android:text="@string/ok"
-        android:textColor="@color/white" />
-</LinearLayout>
+            android:orientation="horizontal">
+
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/button_cancel"
+                android:layout_width="@dimen/dp0"
+                android:layout_height="@dimen/dp40"
+                android:layout_weight="1"
+                android:background="@color/tagColor"
+                android:gravity="center"
+                android:text="@string/cancel"
+                android:textColor="@color/white"
+                android:textSize="@dimen/sp16" />
+
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/button_ok"
+                android:layout_width="@dimen/dp0"
+                android:layout_height="@dimen/dp40"
+                android:layout_marginLeft="@dimen/dp2"
+                android:layout_weight="1"
+                android:background="@color/tagColor"
+                android:gravity="center"
+                android:text="@string/ok"
+                android:textColor="@color/white"
+                android:textSize="@dimen/sp16" />
+        </LinearLayout>
 
     </LinearLayout>
 </RelativeLayout>
