--- a/app/src/main/res/layouts/add_records/layout/activity_seleted_records.xml
+++ b/app/src/main/res/layouts/add_records/layout/activity_seleted_records.xml
@@ -10,29 +10,29 @@
         android:id="@+id/coachmark"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"
         android:elevation="@dimen/dp5"
+        android:scaleType="centerCrop"
+        android:src="@drawable/coachmark"
         android:visibility="gone"
-        tools:visibility="gone"
-        android:src="@drawable/coachmark"/>
+        tools:visibility="gone" />
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-     <include layout="@layout/common_action_bar"/>
+        <include layout="@layout/common_action_bar" />
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_selected_records" />
 
     <io.github.shree.fabmenu.FabSpeedDial
         android:id="@+id/fab"
-        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         android:layout_marginBottom="@dimen/dp16"
+
+        android:visibility="gone"
 
         app:fab_fabBackgroundColor="@color/tagColor"
 
