--- a/app/src/main/res/layouts/dashboard/layout/support_base_layout.xml
+++ b/app/src/main/res/layouts/dashboard/layout/support_base_layout.xml
@@ -11,7 +11,11 @@
         <include layout="@layout/common_action_bar" />
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/support_layout" />
+    <include
+        layout="@layout/support_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/dp56" />
 
 
 </android.support.design.widget.CoordinatorLayout>
