--- a/app/src/main/res/layouts/patient/patient_appointment/layout/appointment_sorting_filter.xml
+++ b/app/src/main/res/layouts/patient/patient_appointment/layout/appointment_sorting_filter.xml
@@ -4,7 +4,7 @@
     android:id="@+id/mainParentLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/otp_background_layout"
     android:orientation="vertical">
 
     <LinearLayout
@@ -158,6 +158,7 @@
                         android:id="@+id/genderHeaderView"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/dp40"
+                        android:background="@color/white"
                         android:orientation="horizontal">
 
                         <ImageView
@@ -174,10 +175,10 @@
                     </LinearLayout>
 
                     <com.rescribe.doctor.ui.customesViews.CustomTextView
+                        android:id="@+id/selectStatus"
                         style="@style/drawer_filter_header_layout"
                         android:background="@color/otp_background_layout"
                         android:gravity="center"
-                        android:id="@+id/selectStatus"
                         android:padding="@dimen/dp5"
                         android:text="@string/select_status"
                         app:customFont="@string/roboto_regular" />
@@ -204,6 +205,7 @@
                         android:id="@+id/clinicFeesHeaderView"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/dp40"
+                        android:background="@color/white"
                         android:orientation="horizontal">
 
                         <ImageView
@@ -232,8 +234,8 @@
                         tools:ignore="RtlSymmetry">
 
                         <com.rescribe.doctor.ui.customesViews.CustomTextView
-                            style="@style/drawer_filter_header_layout"
                             android:id="@+id/selectClinic"
+                            style="@style/drawer_filter_header_layout"
                             android:background="@color/otp_background_layout"
                             android:gravity="center"
                             android:padding="@dimen/dp5"
