--- a/app/src/main/res/layouts/patient/patient_appointment/layout/dialog_location_radio_item.xml
+++ b/app/src/main/res/layouts/patient/patient_appointment/layout/dialog_location_radio_item.xml
@@ -4,12 +4,12 @@
     android:id="@+id/radioButtonClinicName"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minWidth="500dp"
-    android:padding="@dimen/dp6"
     android:layout_gravity="start"
-    android:buttonTint="@color/tagColor"
+    android:button="@drawable/radio_button_selector"
     android:layoutDirection="rtl"
-    tools:text="The test item a"
+    android:minWidth="@dimen/dp500"
+    android:padding="@dimen/dp6"
     android:textAlignment="textStart"
     android:textColor="@color/range_label_color"
-    android:textSize="14sp" />
+    android:textSize="@dimen/sp16"
+    tools:text="The test item a" />
