--- a/app/src/main/res/layouts/patient/patient_appointment/layout/filter_item_chechbox_layout.xml
+++ b/app/src/main/res/layouts/patient/patient_appointment/layout/filter_item_chechbox_layout.xml
@@ -6,19 +6,18 @@
     android:orientation="vertical">
 
     <CheckBox
-        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
         android:id="@+id/menuName"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp50"
-        android:padding="@dimen/dp5"
-        android:focusable="false"
-        android:text="Nagpur"
-        android:drawableTint="@color/tagColor"
-        android:button="@null"
-        android:layout_marginLeft="@dimen/dp16"
-        android:layout_marginStart="@dimen/dp16"
         android:layout_marginEnd="@dimen/dp14"
+        android:layout_marginLeft="@dimen/dp16"
+        android:layout_marginRight="@dimen/dp14"
+        android:layout_marginStart="@dimen/dp16"
+        android:button="@drawable/checkboxselecter"
+        android:focusable="false"
+        android:layoutDirection="rtl"
+        android:padding="@dimen/dp5"
+        android:text="Nagpur"
         android:textColor="@color/black"
-        android:textSize="@dimen/sp16"
-        android:layout_marginRight="@dimen/dp14" />
+        android:textSize="@dimen/sp16" />
 </LinearLayout>
