--- a/app/src/main/res/layouts/patient/patient_appointment/layout/my_appointments_child_item.xml
+++ b/app/src/main/res/layouts/patient/patient_appointment/layout/my_appointments_child_item.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:background="@color/divider"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/divider"
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/dp7"
-        android:layout_marginEnd="@dimen/dp7"
         android:layout_marginBottom="@dimen/dp4"
+        android:layout_marginEnd="@dimen/dp7"
+        android:layout_marginStart="@dimen/dp7"
         android:background="@drawable/result_white_box"
         android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp12">
+            android:layout_marginTop="@dimen/dp8">
 
             <ImageView
                 android:id="@+id/bluelineImageView"
@@ -49,9 +49,9 @@
                 tools:text="ID: 23456" />
 
             <com.rescribe.doctor.ui.customesViews.CustomTextView
+                android:id="@+id/appointmentTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/appointmentTime"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_marginEnd="@dimen/dp16"
@@ -83,9 +83,9 @@
 
         <RelativeLayout
             android:id="@+id/patientDetailsClickLinearLayout"
-            android:layout_marginBottom="@dimen/dp6"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/dp6">
 
             <com.rescribe.doctor.ui.customesViews.CircularImageView
                 android:id="@+id/patientImageView"
@@ -148,6 +148,7 @@
                     android:textSize="@dimen/sp12"
                     app:customFont="@string/roboto_medium"
                     tools:text="OPD Completed" />
+
                 <com.rescribe.doctor.ui.customesViews.CustomTextView
                     android:id="@+id/patientClinicAddress"
                     android:layout_width="wrap_content"
@@ -161,9 +162,6 @@
 
             <CheckBox
                 android:id="@+id/checkbox"
-                tools:visibility="visible"
-                android:visibility="gone"
-                android:padding="@dimen/dp4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
@@ -171,7 +169,10 @@
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="@dimen/dp16"
                 android:layout_marginRight="@dimen/dp16"
-                android:button="@drawable/checkboxselecter" />
+                android:button="@drawable/checkboxselecter"
+                android:padding="@dimen/dp4"
+                android:visibility="gone"
+                tools:visibility="visible" />
 
 
         </RelativeLayout>
@@ -184,58 +185,57 @@
             android:layout_marginStart="@dimen/dp2"
             android:background="@color/tagColor" />
 
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/patientInfoDetailLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/dp8"
             android:layout_marginTop="@dimen/dp3"
-            android:layout_marginBottom="@dimen/dp8">
+            android:orientation="horizontal">
 
-            <com.rescribe.doctor.ui.customesViews.CustomTextView
-                android:id="@+id/patientPhoneNumber"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/dp28"
-                android:layout_marginStart="@dimen/dp28"
-                android:drawableLeft="@drawable/mobile_icon"
-                android:drawablePadding="@dimen/dp9"
-                android:drawableStart="@drawable/mobile_icon"
-                android:textColor="@color/rating_color"
-                android:textSize="@dimen/sp12"
-                app:customFont="@string/roboto_medium"
-                tools:ignore="RtlHardcoded"
-                tools:text="987678999" />
+                android:layout_weight=".4"
+                android:gravity="center_horizontal">
+
+                <com.rescribe.doctor.ui.customesViews.CustomTextView
+                    android:id="@+id/patientPhoneNumber"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/mobile_icon"
+                    android:drawablePadding="@dimen/dp9"
+                    android:drawableStart="@drawable/mobile_icon"
+                    android:textColor="@color/rating_color"
+                    android:textSize="@dimen/sp12"
+                    app:customFont="@string/roboto_medium"
+                    tools:ignore="RtlHardcoded"
+                    tools:text="987678999" />
+
+            </LinearLayout>
 
             <View
                 android:id="@+id/separatorView"
                 android:layout_width="@dimen/dp1"
                 android:layout_height="@dimen/dp20"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/dp32"
-                android:layout_marginStart="@dimen/dp32"
-                android:layout_toEndOf="@id/patientPhoneNumber"
-                android:layout_toRightOf="@id/patientPhoneNumber"
                 android:background="@color/tagColor" />
 
             <LinearLayout
-                android:gravity="center"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/dp20"
-                android:layout_marginStart="@dimen/dp20"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginEnd="@dimen/dp10"
+                android:layout_marginLeft="@dimen/dp20"
                 android:layout_marginRight="@dimen/dp10"
-                android:layout_toEndOf="@id/separatorView"
-                android:layout_toRightOf="@id/separatorView"
+                android:layout_marginStart="@dimen/dp20"
+                android:layout_weight=".6"
+                android:gravity="center"
                 android:orientation="horizontal">
 
                 <com.rescribe.doctor.ui.customesViews.CustomTextView
                     android:id="@+id/outstandingAmountTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
                     android:textColor="@color/black"
                     android:textSize="@dimen/sp11"
                     app:customFont="@string/roboto_medium"
@@ -247,10 +247,9 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/rating_color"
                     android:textSize="@dimen/sp12"
-                    android:layout_gravity="center"
                     app:customFont="@string/roboto_bold"
                     tools:text=" Rs.450/-" />
             </LinearLayout>
-        </RelativeLayout>
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
