--- a/app/src/main/res/layouts/patient/patient_appointment/layout/seekbar_progress_thumb_layout.xml
+++ b/app/src/main/res/layouts/patient/patient_appointment/layout/seekbar_progress_thumb_layout.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <LinearLayout
@@ -18,9 +18,9 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="1000"
-            tools:text="10000"
             android:textColor="@color/white"
-            android:textSize="@dimen/sp11" />
+            android:textSize="@dimen/sp11"
+            tools:text="10000" />
 
     </LinearLayout>
 
