--- a/app/src/main/res/layouts/patient/patient_detail_page/layout/patient_detail_activity.xml
+++ b/app/src/main/res/layouts/patient/patient_detail_page/layout/patient_detail_activity.xml
@@ -41,6 +41,7 @@
             android:background="@drawable/button_selector"
             android:text="@string/add_record"
             android:textColor="@color/white"
+            android:textSize="@dimen/sp16"
             android:visibility="gone"
             tools:visibility="visible" />
     </LinearLayout>
