--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,6 +50,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
+
     <style name="SpinnerTheme" parent="android:Widget.DeviceDefault.DropDownItem.Spinner">
         <item name="android:background">@drawable/spinner_bg</item>
         <item name="android:textColor">@color/black</item>
@@ -57,6 +58,7 @@
         <item name="android:popupElevation">0dp</item>
         <item name="android:popupBackground">@drawable/location_spinner_border</item>
     </style>
+
     <style name="SpinnerThemeProfile" parent="android:Widget.DeviceDefault.DropDownItem.Spinner">
         <item name="android:background">@drawable/spinner_bg_profile</item>
         <item name="android:textColor">@color/black</item>
@@ -84,29 +86,30 @@
     </declare-styleable>
 
     <declare-styleable name="SwitchButton" tools:ignore="ResourceName">
-        <attr name="kswThumbDrawable" format="reference"/>
-        <attr name="kswThumbColor" format="color|reference"/>
-        <attr name="kswThumbMargin" format="dimension|reference"/>
-        <attr name="kswThumbMarginTop" format="dimension|reference"/>
-        <attr name="kswThumbMarginBottom" format="dimension|reference"/>
-        <attr name="kswThumbMarginLeft" format="dimension|reference"/>
-        <attr name="kswThumbMarginRight" format="dimension|reference"/>
-        <attr name="kswThumbWidth" format="dimension|reference"/>
-        <attr name="kswThumbHeight" format="dimension|reference"/>
-        <attr name="kswThumbRadius" format="dimension|reference"/>
-        <attr name="kswBackRadius" format="dimension|reference"/>
-        <attr name="kswBackDrawable" format="reference"/>
-        <attr name="kswBackColor" format="color|reference"/>
-        <attr name="kswFadeBack" format="boolean"/>
-        <attr name="kswThumbRangeRatio" format="float"/>
-        <attr name="kswAnimationDuration" format="integer"/>
-        <attr name="kswTintColor" format="color|reference"/>
-        <attr name="kswTextOn" format="string"/>
-        <attr name="kswTextOff" format="string"/>
-        <attr name="kswTextThumbInset" format="dimension"/>
-        <attr name="kswTextExtra" format="dimension"/>
-        <attr name="kswTextAdjust" format="dimension"/>
+        <attr name="kswThumbDrawable" format="reference" />
+        <attr name="kswThumbColor" format="color|reference" />
+        <attr name="kswThumbMargin" format="dimension|reference" />
+        <attr name="kswThumbMarginTop" format="dimension|reference" />
+        <attr name="kswThumbMarginBottom" format="dimension|reference" />
+        <attr name="kswThumbMarginLeft" format="dimension|reference" />
+        <attr name="kswThumbMarginRight" format="dimension|reference" />
+        <attr name="kswThumbWidth" format="dimension|reference" />
+        <attr name="kswThumbHeight" format="dimension|reference" />
+        <attr name="kswThumbRadius" format="dimension|reference" />
+        <attr name="kswBackRadius" format="dimension|reference" />
+        <attr name="kswBackDrawable" format="reference" />
+        <attr name="kswBackColor" format="color|reference" />
+        <attr name="kswFadeBack" format="boolean" />
+        <attr name="kswThumbRangeRatio" format="float" />
+        <attr name="kswAnimationDuration" format="integer" />
+        <attr name="kswTintColor" format="color|reference" />
+        <attr name="kswTextOn" format="string" />
+        <attr name="kswTextOff" format="string" />
+        <attr name="kswTextThumbInset" format="dimension" />
+        <attr name="kswTextExtra" format="dimension" />
+        <attr name="kswTextAdjust" format="dimension" />
     </declare-styleable>
+
     <style name="SwitchButtonStyle" tools:ignore="ResourceName">
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">16sp</item>
@@ -117,6 +120,7 @@
         <item name="kswTextAdjust">-2dp</item>
         <item name="kswTextExtra">10dp</item>
     </style>
+
     <style name="drawer_filter_header_icon_layout">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -126,6 +130,7 @@
         <item name="android:adjustViewBounds">true</item>
         <item name="android:padding">@dimen/dp8</item>
     </style>
+
     <style name="drawer_filter_gender_style">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -165,10 +170,12 @@
         <item name="android:layout_marginRight">@dimen/dp30</item>
         <item name="android:layout_gravity">center</item>
     </style>
+
     <style name="DayOfTheWeek">
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/patient_history_calender_days</item>
     </style>
+
     <style name="Material"></style>
 
     <style name="Material.App"></style>
@@ -189,7 +196,8 @@
         <item name="android:windowEnterAnimation">@null</item>
         <item name="android:windowExitAnimation">@null</item>
     </style>
-    <style parent="@android:style/Widget.Spinner" name="SpinnerwithNoArrow">
+
+    <style name="SpinnerwithNoArrow" parent="@android:style/Widget.Spinner">
         <item name="android:background">@android:drawable/edit_text</item>
     </style>
 
@@ -206,4 +214,9 @@
 
     <dimen name="activity_vertical_margin">12dp</dimen>
     <dimen name="activity_horizontal_margin">12dp</dimen>
+
+    <style name="tabTextSize" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">@dimen/sp16</item>
+        <item name="android:fontFamily">@font/roboto_medium</item>
+    </style>
 </resources>
