--- a/filepicker/src/main/res/layout/fragment_doc_picker.xml
+++ b/filepicker/src/main/res/layout/fragment_doc_picker.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabBackground="@android:color/white"
-        app:tabTextColor="@android:color/darker_gray"
         app:tabSelectedTextColor="@color/colorAccent"
-        >
+        app:tabTextColor="@android:color/darker_gray">
 
     </android.support.design.widget.TabLayout>
 
@@ -20,12 +19,12 @@
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/tabs"/>
+        android:layout_below="@+id/tabs" />
 
     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true" />
 
 </RelativeLayout>
